2.0.1-stable (2012-??-??)
	* Removed: Element class. It wasn't used.
	* Added: Basic validation and repair methods for broken input data.
	* Fixed: RecurrenceIterator could infinitely loop when an INTERVAL of 0
	  was specified.
	* Added: A cli script that can validate and automatically repair vcards
	  and iCalendar objects.
	* Added: A new 'Compound' property, that can automatically split up parts
	  for properties such as N, ADR, ORG and CATEGORIES.
	* Added: Splitter classes, that can split up large objects (such as exports)
	  into individual objects (thanks @DominikTO and @armin-hackmann).
	* Added: VFREEBUSY component, which allows easily checking wether
	  timeslots are available.
	* Fixed: A bug in Windows timezone-id mappings for times created in
	  Greenlands timezone (sorry Greenlanders! I do care!).
	* Fixed: DTEND was not generated correctly for VFREEBUSY reports.

2.0.0-stable (2012-08-08)
	* VObject is now a separate project from SabreDAV. See the SabreDAV
	  changelog for version information before 2.0.
	* New: VObject library now uses PHP 5.3 namespaces.
	* New: It's possible to specify lists of parameters when constructing
	  properties.
	* New: made it easier to construct the FreeBusyGenerator.